trying out waitress

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
 Flask==2.2.2
-Flask_RESTful==0.3.9
+Flask_Caching==2.1.0
+Flask_Cors==4.0.0
 Flask_SocketIO==5.3.4
+waitress==3.0.0
 gunicorn==20.1.0
 Werkzeug==2.2.2
 redis==5.0.1
-flask_login==0.6.3
-Flask-Caching==2.1.0
-cachelib==0.9.0
-flask_cors==4.0.0
